[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Components/Flasher.gd" type="Script" id=1]

[node name="Flasher" type="Spatial"]
script = ExtResource( 1 )

[node name="TweenIdle" type="Tween" parent="."]

[node name="FlashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
